BUGFIX: in generating output of E and B fields. TESTED: GC solver, all works great!

--- a/PROMETHEUS++/makefile
+++ b/PROMETHEUS++/makefile
@@ -28,7 +28,7 @@ ifeq ($(UNAME), Linux)
 	CC=mpic++
 
 	CCXXFLAGS =-std=c++11
-	CCDEFINEFLAGS=-DONED	-DHDF5_FLOAT	-DHDF5_SINGLE_FILE
+	CCDEFINEFLAGS=-DONED	-DHDF5_FLOAT	-DHDF5_SINGLE_FILE	-DCHECKS_ON
 	CCFLAGS =	$(CCXXFLAGS)	-fopenmp	-O2
 
 	HDF_INSTALL = ../HDF5
