--- a/PROMETHEUS++/Makefile
+++ b/PROMETHEUS++/Makefile
@@ -31,10 +31,10 @@ CCFLAGS=$(CCXXFLAGS)	-fopenmp	-O2
 HDF5_INSTALL=
 ARMADILLO_INSTALL=
 
-INCLUDE_HDF5=-I$(HDF_INSTALL)/include
+INCLUDE_HDF5=-I$(HDF5_INSTALL)/include
 INCLUDES=-I$(ARMADILLO_INSTALL)/include	-I$(ARMADILLO_INSTALL)/lib	-I$(ARMADILLO_INSTALL)/lib64
-EXTLIB=-L$(HDF_INSTALL)/lib
-LIBSHDF=$(EXTLIB) $(HDF_INSTALL)/lib/libhdf5.a
+EXTLIB=-L$(HDF5_INSTALL)/lib
+LIBSHDF=$(EXTLIB) $(HDF5_INSTALL)/lib/libhdf5.a
 LIB_FLAGS=-L$(ARMADILLO_INSTALL)/lib -L$(ARMADILLO_INSTALL)/lib64
 LIB=-lz	-ldl	-lm	-lhdf5_cpp	-larmadillo -lgfortran
 OMP_LIB_FLAGS=-lgomp
