--- a/PROMETHEUS++/Makefile
+++ b/PROMETHEUS++/Makefile
@@ -27,15 +27,15 @@ BIN=bin
 MPICXX=
 CCXXFLAGS=-std=c++11
 CCDEFINEFLAGS=-DHDF5_FLOAT	-DHDF5_SINGLE_FILE	-DCHECKS_ON
-CCFLAGS=$(CCXXFLAGS)	-fopenmp	-O2
+CCFLAGS=$(CCXXFLAGS)	-fopenmp	-O3
 HDF5_INSTALL=
 ARMADILLO_INSTALL=
 
 INCLUDE_HDF5=-I$(HDF5_INSTALL)/include
-INCLUDES=-I$(ARMADILLO_INSTALL)/include	-I$(ARMADILLO_INSTALL)/lib	-I$(ARMADILLO_INSTALL)/lib64
+INCLUDES=-I$(ARMADILLO_INSTALL)/include	-I$(ARMADILLO_INSTALL)/lib
 EXTLIB=-L$(HDF5_INSTALL)/lib
 LIBSHDF=$(EXTLIB) $(HDF5_INSTALL)/lib/libhdf5.a
-LIB_FLAGS=-L$(ARMADILLO_INSTALL)/lib -L$(ARMADILLO_INSTALL)/lib64
+LIB_FLAGS=-L$(ARMADILLO_INSTALL)/lib
 LIB=-lz	-ldl	-lm	-lhdf5_cpp	-larmadillo -lgfortran
 OMP_LIB_FLAGS=-lgomp
 
