--- a/PRO++FILES/Makefile
+++ b/PRO++FILES/Makefile
@@ -32,11 +32,11 @@ HDF5_INSTALL=
 ARMADILLO_INSTALL=
 
 INCLUDE_HDF5=-I$(HDF5_INSTALL)/include
-INCLUDES=-I$(ARMADILLO_INSTALL)/include	-I$(ARMADILLO_INSTALL)/lib
+INCLUDES=-I$(ARMADILLO_INSTALL)/include	-I$(ARMADILLO_INSTALL)/lib	-I$(ARMADILLO_INSTALL)/lib64
 EXTLIB=-L$(HDF5_INSTALL)/lib
 LIBSHDF=$(EXTLIB) $(HDF5_INSTALL)/lib/libhdf5.a
-LIB_FLAGS=-L$(ARMADILLO_INSTALL)/lib
-LIB=-lz	-ldl	-lm	-lhdf5_cpp	-larmadillo -lgfortran
+LIB_FLAGS=-L$(ARMADILLO_INSTALL)/lib	-L$(ARMADILLO_INSTALL)/lib64
+LIB=-lz	-ldl	-lm	-lhdf5_cpp	-larmadillo #-lgfortran
 OMP_LIB_FLAGS=-lgomp
 
 
