Contains 4D-MH with Bz profile in MPI OPTIMIZED version

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ PROMETHEUS++/outputFiles/
 PROMETHEUS++/nohup*
 *.fig
 PROMETHEUS++/*.csv
-PROMETHEUS++/run_pro++-debugg.sh
+PROMETHEUS++/*.sh
+PROMETHEUS++/*.map
