Working version of collision operator. Operator however not validated against beam slowing down test

--- a/PRO++FILES/Makefile
+++ b/PRO++FILES/Makefile
@@ -53,7 +53,8 @@ mpi_main.o				\
 randomStart.o			\
 quietStart.o			\
 energyDiagnostic.o              \
-collisionOperator.o)
+collisionOperator.o             \
+particleBoundaryConditions.o)
 
 all: $(BIN)/PROMETHEUS++
 
