Added commit hash to outputFiles; copying external profiles, input files to out files; refactored 2D functions and templets; removed eid, eiv, extrapolateIonsdensity and extrapolateIonsVelocity

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ PROMETHEUS++/bin/
 PROMETHEUS++/inputFiles/
 PROMETHEUS++/outputFiles/
 PROMETHEUS++/nohup*
+PROMETHEUS++/m*
 *.fig
 PROMETHEUS++/*.csv
