Added new Makefile and input file with RF operator paramaters

--- a/PRO++FILES/Makefile
+++ b/PRO++FILES/Makefile
@@ -54,6 +54,7 @@ randomStart.o			\
 quietStart.o			\
 energyDiagnostic.o              \
 collisionOperator.o             \
+rfOperator.o										\
 particleBoundaryConditions.o)
 
 all: $(BIN)/PROMETHEUS++
