Chnaged INSTALL.sh and Makefile that works on intel compiler on NERSC

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ PROMETHEUS++/inputFiles/
 PROMETHEUS++/outputFiles/
 PROMETHEUS++/nohup*
 PROMETHEUS++/m*
+*/*.out
+*/*.txt
 *.fig
 PROMETHEUS++/*.csv
