--- a/PRO++FILES/Makefile
+++ b/PRO++FILES/Makefile
@@ -24,10 +24,11 @@ OBJ=obj
 LIBS=libs
 BIN=bin
 
-MPICXX=
+MPICXX=mpic++
 CCXXFLAGS=-std=c++11
 CCDEFINEFLAGS=-DHDF5_FLOAT	-DHDF5_SINGLE_FILE	-DCHECKS_ON
-CCFLAGS=$(CCXXFLAGS)	-fopenmp	-O3
+#CCFLAGS=$(CCXXFLAGS)	-fopenmp	-O3
+CCFLAGS=$(CCXXFLAGS)	-qopenmp	-O3
 HDF5_INSTALL=
 ARMADILLO_INSTALL=
 
@@ -37,8 +38,8 @@ EXTLIB=-L$(HDF5_INSTALL)/lib
 LIBSHDF=$(EXTLIB) $(HDF5_INSTALL)/lib/libhdf5.a
 LIB_FLAGS=-L$(ARMADILLO_INSTALL)/lib	-L$(ARMADILLO_INSTALL)/lib64
 LIB=-lz	-ldl	-lm	-lhdf5_cpp	-larmadillo #-lgfortran
-OMP_LIB_FLAGS=-lgomp
-
+#OMP_LIB_FLAGS=-lgomp
+OMP_LIB_FLAGS=-qopenmp
 
 BINARIES = $(addprefix $(OBJ)/,structures.o	\
 main.o					\
