--- a/PRO++FILES/Makefile
+++ b/PRO++FILES/Makefile
@@ -27,7 +27,7 @@ BIN=bin
 MPICXX=
 CCXXFLAGS=-std=c++11
 CCDEFINEFLAGS=-DHDF5_FLOAT	-DHDF5_SINGLE_FILE	-DCHECKS_ON
-CCFLAGS=$(CCXXFLAGS)	-fopenmp	-O3
+CCFLAGS=$(CCXXFLAGS)	-qopenmp	-O3
 HDF5_INSTALL=
 ARMADILLO_INSTALL=
 
@@ -37,7 +37,7 @@ EXTLIB=-L$(HDF5_INSTALL)/lib
 LIBSHDF=$(EXTLIB) $(HDF5_INSTALL)/lib/libhdf5.a
 LIB_FLAGS=-L$(ARMADILLO_INSTALL)/lib	-L$(ARMADILLO_INSTALL)/lib64
 LIB=-lz	-ldl	-lm	-lhdf5_cpp	-larmadillo #-lgfortran
-OMP_LIB_FLAGS=-lgomp
+OMP_LIB_FLAGS=-qopenmp
 
 
 BINARIES = $(addprefix $(OBJ)/,structures.o	\
@@ -52,7 +52,6 @@ outputHDF5.o			\
 mpi_main.o				\
 randomStart.o			\
 quietStart.o			\
-energyDiagnostic.o              \
 collisionOperator.o             \
 rfOperator.o										\
 particleBoundaryConditions.o)
