Removed mpic++ from the Makefile in PRO++Files

--- a/PRO++FILES/Makefile
+++ b/PRO++FILES/Makefile
@@ -24,7 +24,7 @@ OBJ=obj
 LIBS=libs
 BIN=bin
 
-MPICXX=mpic++
+MPICXX=
 CCXXFLAGS=-std=c++11
 CCDEFINEFLAGS=-DHDF5_FLOAT	-DHDF5_SINGLE_FILE	-DCHECKS_ON
 CCFLAGS=$(CCXXFLAGS)	-qopenmp	-O3
